# AutoEvolve

./: .gitignore  README.md  pyproject.toml
autoevolve/: __init__.py  cli.py  config.py
autoevolve/bridges/: __init__.py  telegram.py
autoevolve/core/: __init__.py  agent.py  architect.py  judge.py  orchestrator.py  role_forge.py  state.py  watcher.py
autoevolve/llm/: __init__.py  base.py  claude_cli.py  litellm_http.py  ollama.py
autoevolve/runtime/: __init__.py  daemon.py
autoevolve/sandbox/: __init__.py  base.py  docker.py  factory.py  local.py
autoevolve/tools/: __init__.py  fs.py  human_ask.py  python_exec.py  registry.py  shell.py
autoevolve/ui/: __init__.py  dashboard.py
autoevolve/web/: __init__.py  server.py
tests/: test_smoke.py
